tests/cases/control-flow/errors/for-let-filter-range.ari
fn main() -> i64 {
  var total = 0;
  for let 2 in 0..5 {
    total = total + 1;
  }
  total
}
